objects/geopointe__Layer__c.object
<CustomObject>
    <description>Stores information about custom layers that can be applied to the Geopointe Map.</description>
    <fields>
        <fullName>geopointe__Active__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Control if this Layer is active and can be added to map by users.</inlineHelpText>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>geopointe__Auto_Load__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>If checked, automatically load this layer when the Map page is opened.</inlineHelpText>
        <label>Auto Load</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>geopointe__Description__c</fullName>
        <inlineHelpText>A short description for this layer.</inlineHelpText>
        <label>Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>geopointe__URL__c</fullName>
        <inlineHelpText>URL for the KML, KMZ, or GEORSS file.</inlineHelpText>
        <label>URL</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <label>Geopointe Layer</label>
    <nameField>
        <label>Layer Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Geopointe Layers</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>